Add files for nerds

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "darcula-ts",
+  "name": "darcula-plus",
   "displayName": "Darcula Plus",
   "description": "Darcula Plus Theme",
   "version": "0.0.1",
