--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.2",
   "type": "module",
   "publisher": "myziura",
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Myziura/darcula-plus"
