--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "darcula-plus",
   "displayName": "Darcula Plus",
   "description": "Darcula Plus Theme",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "type": "module",
   "publisher": "myziura",
   "icon": "icon.png",
@@ -11,11 +11,15 @@
     "url": "https://github.com/Myziura/darcula-plus"
   },
   "watch": {
-    "build": "src/theme.js"
+    "build": "src/theme.js",
+    "extract": "src/extract.js"
   },
   "scripts": {
     "watch": "npm-watch",
-    "build": "node src/build.js"
+    "build": "node src/build.js",
+    "extract": "node --experimental-json-modules src/extract.js",
+    "create-v": "vsce package",
+    "publish": "vsce publish"
   },
   "engines": {
     "vscode": "^1.67.0"
